# python-basics

./: .gitignore  README.md
lesson 12/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  main.py  mydb.py
lesson 19/: app.py  db.py
lesson 19/templates/: base.html  index.html
lesson 19/templates/accounts/: detail.html  list.html
lesson 19/templates/doc_income/: new.html
lesson 19/views/: __init__.py  account.py  accounts.py  doc_income.py
lesson 6/: cars.py  main.py  planes.py  ships.py
lesson12/: db.sqlite3-shm  db.sqlite3-wal  main — копия.py
lesson18/: app.py
lesson19/: app.py  money.db
lesson19/templates/doc_income/: detail.html  list.html
lesson19/templates/ref_account/: detail.html  list.html
lesson19/views/: ref_account.py
lesson20/: Dockerfile  Pipfile
lesson20/money/: db.py  pyproject.toml
lesson20/money/templates/: base.html
lesson20/money/templates/doc_income/: new.html
lesson20/money/views/: __init__.py  doc_income.py
lesson21/: docker-compose.yaml  requirements.txt
lesson21/money/: app.py  config.py  main.py  money.db  pyproject.toml
lesson21/money/models/: __init__.py  doc_income.py  ref_account.py
lesson21/money/tests/: test_money.py
lesson21/money/views/: doc_income.py  ref_account.py
lesson22/: docker-compose.yaml
lesson22/dengi/dengi/: asgi.py  urls.py  wsgi.py
lesson22/dengi/koshelek/: apps.py  models.py
lesson22/pgdata/global/: 1260  1262  2671  (+3 more)
lesson23/: docker-compose.yaml
lesson23/dengi/: manage.py
lesson25/: docker-compose.yaml
lesson3/: main.py
lesson6/: exceptions.py  parts.py  vehicle.py
(+137 files in other folders)
